--- a/css/scss/partials/_products.scss
+++ b/css/scss/partials/_products.scss
@@ -10,6 +10,12 @@
   background-position: right;
 }
 
+.product-cards-container {
+  @media screen and (-ms-high-contrast: none) {
+    background-color: white;
+}
+}
+
 //This is the container for each category of cards. I have added max-width on some breakpoints to make it look more professional and change the number of cards per line only on a breakpoint 
 .product-category {
   //border: 2px green solid;
@@ -18,6 +24,9 @@
   justify-content: space-evenly;
   max-width: 300px;
   margin: auto;
+  @media screen and (-ms-high-contrast: none) {
+    justify-content: space-around;
+}
   @media only screen and (min-width: $break-s) {
     max-width: 378px;
 }
@@ -73,6 +82,9 @@
   margin-right: 38px;
   float: right;
   width: 120px;
+  @media screen and (-ms-high-contrast: none) {
+    transform: inherit;
+}
   @media only screen and (min-width: $break-s) {
     margin-top: -61px; 
     margin-right: 5px;
