--- a/css/style.scss
+++ b/css/style.scss
@@ -38,7 +38,7 @@ p{
     width: 25%;
     border: solid 1.7px $brand-color-dark;
     background-color: $brand-color-dark;
-    margin: 10px auto 50px;
+    margin: 10px auto 50px;  
 }
 
 .clearfix{
@@ -66,6 +66,10 @@ p{
     justify-content: space-around;
     width: 100%;
     text-transform: uppercase;
+    @media screen and (-ms-high-contrast: none) {
+        background-color: white;
+  }
+  
     .icon-headline-item{
         justify-content: center;
         align-items: center;
@@ -108,6 +112,9 @@ p{
 #article{
     width: 100%;
     max-width: 1200px;
+    @media screen and (-ms-high-contrast: none) {
+        background-color: white; 
+  }  
     h2{
         margin: 0 10%;
     }
@@ -271,6 +278,9 @@ p{
     width: 100%;
     color: $text-colour-dark;
     padding: 50px 0;
+    @media screen and (-ms-high-contrast: none) {
+        background-color: white;;
+    }  
     .review-carousel{
         width: 80%;
         margin: 0 auto;   
